[package]
name = "matyo_tac_toe"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["png"] } # Add the types you want support for
